# Wyrmsweeper

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/: README.md
assets/classic_theme/: color_palette.aseprite  sprite_sheet.aseprite
cmake/: FindRaygui.cmake  FindRaylib.cmake
src/: CMakeLists.txt  cmake_config.h.in  main.cpp  resource.h  win32_resource.rc  wyrmsweeper.cpp  wyrmsweeper.h
src/app/: wyrmsweeper.cpp  wyrmsweeper.h
src/assets/classic_theme/: font.h  sprite_sheet.h
src/components/: mine_field.cpp  mine_field.h  screen.cpp  screen.h  theme.h
src/core/: wyrmsweeper.cpp  wyrmsweeper.h
src/debug/: log.h
src/gui/: layout_constants.h
src/screens/: game_screen.cpp  game_screen.h  main_menu_screen.cpp  main_menu_screen.h
src/themes/: classic_theme.cpp  classic_theme.h
src/thirdparties/: raygui.cpp  raylib_utils.cpp  raylib_utils.h
src/win32/: resource.rc
